<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.zhang</groupId>
    <artifactId>trace-master</artifactId>
    <version>${trace-master.version}</version>
    <packaging>pom</packaging>

    <modules>
        <module>trace-master-agent</module>
        <module>trace-master-spring-agent</module>
        <module>trace-master-core</module>
        <module>trace-master-server</module>
    </modules>

    <properties>
        <trace-master.version>1.0.0-SNAPSHOT</trace-master.version>

        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <lombok.version>1.18.32</lombok.version>
        <spring-boot.version>3.3.4</spring-boot.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>com.zhang</groupId>
                <artifactId>trace-master-core</artifactId>
                <version>${trace-master.version}</version>
            </dependency>

            <dependency>
                <groupId>com.zhang</groupId>
                <artifactId>trace-master-agent</artifactId>
                <version>${trace-master.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>
    </dependencies>

</project>